# mcp_rag_gis_system

./: .env.sample  analisis_codigo.md  debug_rag.py  implementacion.md  pyproject.toml  readme.md  requirements.txt  requirements_timescale.txt
data/documents/: datos_ejemplo.csv  ejemplo.md
docker/: docker-compose.yml  postgres-init.sql  timescale-init.sql
docker/init-script/: 01-extensions.sql  setup_complete_system.sh
frontend/: dashboard.py
scripts/: install_ollama_models.py  install_system.sh  run_servers.py  setup_database.py  timescale-init.sql
src/api/: __init__.py  main.py
src/api/routers/: __init__.py  gis.py  maps.py  sensores.py  timeseries.py
src/config/: __init__.py  settings.py
src/database/: __init__.py  models.py  models_TimescaleDB.py  postgres_client.py  timescale_client.py
src/mcp_servers/: __init__.py  gis_server.py  maps_server.py  rag_server.py  timescale_server.py
src/services/: __init__.py  gis_service.py  maps_service.py  rag_service.py  sensor_service.py  timescale_service.py  twilio_service.py
src/utils/: __init__.py  document_processor.py  geocoding.py  spatial_analysis.py
test/: quick_test.py  test_complete_system.py  test_individual.py  test_mcp.py  test_simple.py
utils/: twilio_utils.py
